--- a/package.json
+++ b/package.json
@@ -4,34 +4,31 @@
   "main": "file.js",
   "type": "module",
   "scripts": {
+    "exec": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "clear ; npx nodemon --env-file=.env dist/server.js"
+    "start": "clear ; npx nodemon --env-file=.env app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/cookie-parser": "^1.4.7",
-    "@types/express-session": "^1.18.0",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.7",
+    "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
     "redis": "^4.7.0",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.0",
-    "@types/express-validator": "^3.0.0",
-    "@types/node": "^22.7.5",
-    "@types/socket.io": "^3.0.1",
-    "@types/uuid": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "express-validator": "^7.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "mongodb": "^6.9.0"
   }
 }
