set up esj templates, set up login functionality

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+SESSION_SECRET='98765rvbd-dj1swy'
 PORT=3000
 REDIS_URL='redis://localhost:6379'
-SESSION_SECRETE='jhvx3456678ndjm8h'
+MONGODB_URI='mongodb://localhost/chatapp'
