--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "exec": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "clear ; npx nodemon --env-file=.env app.js"
   },
   "keywords": [],
@@ -28,6 +27,7 @@
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
+    "ejs": "^3.1.10",
     "express-validator": "^7.2.0",
     "mongodb": "^6.9.0"
   }
