--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@upstash/redis": "^1.34.3",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.7",
     "debug": "~2.6.9",
