set unique to be user._id

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,22 @@
-SESSION_SECRET='98765rvbd-dj1swy'
+# Environment
+NODE_ENV=development
+
+# Server
 PORT=3000
-REDIS_URL='redis://localhost:6379'
-MONGODB_URI='mongodb://localhost/chatapp'
+HOSTNAME=localhost
+
+# Session
+SESSION_SECRET=your-development-secret-here
+
+# MongoDB
+MONGODB_URI_ATLAS=your-mongodb-uri-here
+
+# Redis
+REDIS_USERNAME=default
+REDIS_URL=your-redis-url-here
+REDIS_REST_TOKEN=your-redis-token-here
+REDIS_PORT=6379
+
+# Cookie and Security
+COOKIE_DOMAIN=localhost
+ALLOWED_ORIGINS=http://localhost:3000
