--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
   "description": "",
   "dependencies": {
     "@upstash/redis": "^1.34.3",
+    "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^6.9.0",
     "morgan": "~1.9.1",
     "redis": "^4.7.0",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
-  },
-  "devDependencies": {
-    "bcrypt": "^5.1.1",
-    "ejs": "^3.1.10",
-    "express-validator": "^7.2.0",
-    "mongodb": "^6.9.0"
   }
 }
