--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.8.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
