--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ REDIS_PORT=6379
 # Cookie and Security
 COOKIE_DOMAIN=localhost
 ALLOWED_ORIGINS=http://localhost:3000
+
+# Email
+EMAIL_PASSWORD='92837 hjdk762y jd'
+EMAIL_USER='yourmail@gmail.com'
